# loki_setupdb

./: .gitignore  CHANGES  Makefile  Makefile.in  README.md  arch.c  arch.h  autogen.sh  configure  configure.in  convert.c  getopt.c  md5.c  register.c  setup-xml.h  setupdb.c  setupdb.h
.github/workflows/: codeql-analysis.yml
